將原本的 JDBC Dao 改為 JPA Dao