@@ -73,7 +73,7 @@ public class EmpServlet extends HttpServlet {
 
                 Integer empno = null;
                 try {
-                    empno = new Integer(str);
+                    empno = Integer.valueOf(str);
                 } catch (Exception e) {
                     errorMsgs.add("員工編號格式不正確");
                 }
@@ -124,7 +124,7 @@ public class EmpServlet extends HttpServlet {
 
             try {
                 // 1.接收請求參數
-                Integer empno = new Integer(req.getParameter("empno"));
+                Integer empno = Integer.valueOf(req.getParameter("empno"));
 
                 // 2.開始查詢資料
                 EmpService empService = new EmpServiceImpl();
@@ -154,7 +154,7 @@ public class EmpServlet extends HttpServlet {
 
             try {
                 // 1.接收請求參數 - 輸入格式的錯誤處理
-                Integer empno = new Integer(req.getParameter("empno").trim());
+                Integer empno = Integer.valueOf(req.getParameter("empno").trim());
 
                 String ename = req.getParameter("ename");
                 if (ename == null || ename.trim().length() == 0) {
@@ -177,7 +177,7 @@ public class EmpServlet extends HttpServlet {
 
                 Double sal = null;
                 try {
-                    sal = new Double(req.getParameter("sal").trim());
+                    sal = Double.valueOf(req.getParameter("sal").trim());
                 } catch (NumberFormatException e) {
                     sal = 0.0;
                     errorMsgs.add("薪水請填數字");
@@ -185,13 +185,13 @@ public class EmpServlet extends HttpServlet {
 
                 Double comm = null;
                 try {
-                    comm = new Double(req.getParameter("comm").trim());
+                    comm = Double.valueOf(req.getParameter("comm").trim());
                 } catch (NumberFormatException e) {
                     comm = 0.0;
                     errorMsgs.add("獎金請填數字");
                 }
 
-                Integer deptno = new Integer(req.getParameter("deptno").trim());
+                Integer deptno = Integer.valueOf(req.getParameter("deptno").trim());
 
                 EmpDO empDO = new EmpDO();
                 empDO.setEmpno(empno);
@@ -200,7 +200,10 @@ public class EmpServlet extends HttpServlet {
                 empDO.setHiredate(hiredate);
                 empDO.setSal(sal);
                 empDO.setComm(comm);
-                empDO.setDeptno(deptno);
+                DeptDO deptDO = new DeptDO();
+                deptDO.setDeptno(deptno);
+                empDO.setDeptDO(deptDO);
+
 
                 // Send the use back to the form, if there were errors
                 if (!errorMsgs.isEmpty()) {
@@ -260,7 +263,7 @@ public class EmpServlet extends HttpServlet {
 
                 Double sal = null;
                 try {
-                    sal = new Double(req.getParameter("sal").trim());
+                    sal = Double.valueOf(req.getParameter("sal").trim());
                 } catch (NumberFormatException e) {
                     sal = 0.0;
                     errorMsgs.add("薪水請填數字");
@@ -268,13 +271,13 @@ public class EmpServlet extends HttpServlet {
 
                 Double comm = null;
                 try {
-                    comm = new Double(req.getParameter("comm").trim());
+                    comm = Double.valueOf(req.getParameter("comm").trim());
                 } catch (NumberFormatException e) {
                     comm = 0.0;
                     errorMsgs.add("獎金請填數字");
                 }
 
-                Integer deptno = new Integer(req.getParameter("deptno").trim());
+                Integer deptno = Integer.valueOf(req.getParameter("deptno").trim());
 
                 EmpDO empDO = new EmpDO();
                 empDO.setEname(ename);
@@ -282,7 +285,9 @@ public class EmpServlet extends HttpServlet {
                 empDO.setHiredate(hiredate);
                 empDO.setSal(sal);
                 empDO.setComm(comm);
-                empDO.setDeptno(deptno);
+                DeptDO deptDO = new DeptDO();
+                deptDO.setDeptno(deptno);
+                empDO.setDeptDO(deptDO);
 
                 // Send the use back to the form, if there were errors
                 if (!errorMsgs.isEmpty()) {
@@ -320,7 +325,7 @@ public class EmpServlet extends HttpServlet {
 
             try {
                 // 1.接收請求參數
-                Integer empno = new Integer(req.getParameter("empno"));
+                Integer empno = Integer.valueOf(req.getParameter("empno"));
 
                 // 2.開始刪除資料
                 EmpService empService = new EmpServiceImpl();
